# ncurses_life

./: CMakeLists.txt  life.c
